recursion.cons.last.Last.scala.error
Compilation error:
Last:4: error: not found: value dernier
  dernier(l.tail)
  ^