recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  if (l.tail == Nil) l.head
  dernier(l.tail)
}